# pytest-copie

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.rst  noxfile.py  pyproject.toml  warnings.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: pypackage_check.yaml  release.yaml  unit.yaml
demo_template/: README.rst  copier.yaml
demo_template/template/: README.rst.jinja
demo_template/tests/: test_custom_template_fixture.py  test_template.py
docs/: conf.py  index.rst  install.rst  usage.rst
docs/_static/: custom.css
docs/_template/: pypackage-credit.html
pytest_copie/: __init__.py  plugin.py
stubs/pytest_copie/: __init__.pyi  plugin.pyi
tests/: check_warnings.py  conftest.py  test_copie.py  test_copie_parent_child.py  test_pytest_copie.py
